--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FactsApp</string>
     <string name="no_results_found">No results found</string>
+    <string name="no_internet_message">Check your internet connection and try again.</string>
 </resources>
